# xerxes-node

./: .env.gpg  .gitignore  MANIFEST.in  README.md  cli.py  config.yaml  config.yaml.maly_stojan  config.yaml.velky_stojan  cpytest.py  debug.py  default_settings.yaml  main.py  manual_test_bulk_write.py  probe  pytest.py  requirements.txt  setup.py  snapcraft.yaml  tare.py  test.py  worker  xerxes-node  xerxes-node.service  xerxes-node.sh  xerxes-worker  xerxes-worker.py
cpp/: .gitignore  CMakeLists.txt  cpytest.py  node-main.cpp  slowpytest.py  test.cpp
cpp/include/: Bus.hpp  Protocol.hpp  RS485.hpp  Stopwatch.hpp  VectorOp.hpp  bus.h  gpio_pin.h  p_leaf.h  pressure.h  protocol.h  rs485.h
cpp/src/: Bus.cpp  Protocol.cpp  RS485.cpp  Stopwatch.cpp  VectorOp.cpp  bus.cpp  gpio_pin.cpp  p_leaf.cpp  protocol.cpp  rs485.cpp  vectorop.cpp
example/: .env  config-PRJ-16.yaml  config-prj16-1.yaml  config.yaml
lib/: CMakeLists.txt  p_leaf.cpp  protocol.cpp  rs485.cpp  stopwatch.cpp
lib/include/: bus.h  exceptions.h  p_leaf.h  protocol.h  rs485.h  temperature.h
lib/test/: main-test.cpp
measurements/: readme.md
script/: 50-custom.rules  90-usb-serial-latency.rules  README.md  huawei_boot.sh  requirements.apt  setup.sh  xerxes-node.service  xerxes-node.sh
script/etc/netplan/: 50-cloud-init.yaml
script/etc/systemd/system/: huawei-modem.service  xerxes-node.service
script/etc/udev/rules.d/: 40-huawei.rules  (+2 more)
snap/: MANIFEST.in  snapcraft.yaml
src/: db.py
utils/: tare.py
wiringpi-cpp/: CMakeLists.txt  cpytest.py  slowpytest.py  test.cpp  xerxeslib.cpp  xerxeslib.hpp
xerxes/: settings.py
xerxes_node/: config.py  ids.py  medium.py  network.py  parser.py  settings.py  spi_sensor.py  system.py  system2.py  timeutil.py  uploader.py  utils.py
xerxes_node/communication/: protocol.py
xerxes_node/example/: config.py  config.yaml
xerxes_node/hierarchy/: branch.py  leaf.py  nivelation_branch.py  pleaf.py
xerxes_node/hierarchy/branches/: branch.py  inclination.py  length.py  nivelation.py  nivelation_branch.py  pollutant.py
xerxes_node/hierarchy/leaves/: ileaf.py  leaf.py  length.py  pleaf.py  pollutant.py
xerxes_node/leaves/: leaf_template.py  pleaf.py
xerxes_node/units/: angle.py  nivelation.py  pressure.py  temp.py  unit.py
(+1 files in other folders)
